css/master.css
/* ... */
.btn-ceb1:hover {
  color: white;
  /* For browsers that do not support gradients */
  /* For Safari 5.1 to 6.0 */
  /* For Opera 11.1 to 12.0 */
  /* For Firefox 3.6 to 15 */
  background: linear-gradient(#00c8f3, #0097f3);
  box-shadow: 0px 6px 6px 0px rgba(0, 0, 0, 0.15), 0px 3px 8px 0px rgba(0, 199, 243, 0.3); }

.btn-ceb3:hover {
  color: white;
  /* For browsers that do not support gradients */
  /* For Safari 5.1 to 6.0 */
  /* For Opera 11.1 to 12.0 */
  /* For Firefox 3.6 to 15 */
  background: linear-gradient(#00c8f3, #0097f3);
  box-shadow: 0px 6px 6px 0px rgba(0, 0, 0, 0.15), 0px 3px 8px 0px rgba(0, 199, 243, 0.3); }

@media (max-width: 991px) {
  .navbar-header {
    float: none; }
  .navbar-toggle {
    display: block; }
  .navbar-collapse {
    border-top: 1px solid transparent;
    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1); }
  .navbar-collapse.collapse {
    display: none !important; }
  .navbar-nav {
    float: none !important;
    margin: 7.5px -15px; }
  .navbar-nav > li {
    float: none; }
  .navbar-nav > li > a {
    padding-top: 10px;
    padding-bottom: 10px; }
  .navbar-text {
    float: none;
    margin: 15px 0; }
  /* since 3.1.0 */
  .navbar-collapse.collapse.in {
    display: block !important; }
  .collapsing {
    overflow: hidden !important; } }

@media (min-width: 991px) {
  .navbar > .container .navbar-brand,
  .navbar > .container-fluid .navbar-brand {
    margin-left: 0px; } }

@media (max-width: 991px) {
  .navbar-center {
    position: absolute;
    width: 100%;
    left: 0;
    top: 0;
    text-align: center;
    margin: auto;
    height: 100%; } }

@media (min-width: 768px) {
  .navbar > .container .navbar-brand,
  .navbar > .container-fluid .navbar-brand {
    margin-left: 0px; } }

@media (max-width: 499px) {
  .interaction-tab
tbody > tr > td {
    width: 15px; }
  .type3 table thead > tr > th:nth-child(even),
  .type3 table tbody > tr:nth-child(odd) > td:nth-child(even) {
    width: 200px; }
  .btn-group-justified {
    display: initial; }
  .btn-group-container {
    padding-left: 0px;
    padding-right: 0px; }
    .btn-group-container .btn-group-justified .btn {
      font-size: 14px; }
  .width-500 {
    padding-left: 5px;
    padding-right: 5px; }
  .btn-tab-group {
    padding: 5px; }
  .questions > .row {
    margin: 0px;
    padding-left: 0px;
    padding-right: 0px; }
    .questions > .row .width-500 {
      padding-left: 0px;
      padding-right: 0px; } }

/*

radio button css 
*/
input[type=checkbox]:not(old),
input[type=radio]:not(old) {
  display: none; }

input[type=checkbox]:not(old) + label,
input[type=radio]:not(old) + label {
  height: 22px;
  float: right;
  margin-top: 6px;
  display: inline-block;
  position: relative;
  margin-left: 40px;
  padding-left: 28px;
  background: url("/images/answerRadioNormal.png") no-repeat 0 0;
  line-height: 24px; }

input[type=checkbox]:not(old):checked + label {
  background-position: 0 -24px; }

input[type=radio]:not(old):checked + label {
  background: url("/images/answerRadioSelected.png") no-repeat 0 0; }

.ceb-question-progressbar {
  z-index: 100;
  width: 100%;
  height: 30px;
  position: fixed;
  bottom: 0;
  padding: 10px 15px;
  background: linear-gradient(#f7f7f7, #f0f0f0);
  box-shadow: 0px -1px 8px 0px rgba(0, 0, 0, 0.15), 0px -1px 0px 0px rgba(0, 0, 0, 0.15), 0px -1px 0px 0px white; }
  .ceb-question-progressbar .progress {
    height: 10px;
    margin-bottom: 0px;
    border-radius: 30px;
    border-style: inset;
    background-image: linear-gradient(to bottom, #dcdcdc, #e5e5e5);
    box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.75), inset 0 1px 2px 0 rgba(0, 0, 0, 0.2); }
  .ceb-question-progressbar .progress-bar-success {
    border-radius: 30px;
    background-size: 15px 15px;
    background-color: #00adee;
    background-image: linear-gradient(135deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
    box-shadow: inset 0 -1px 4px rgba(255, 255, 255, 0.3), inset 0 -2px 4px rgba(0, 0, 0, 0.3); }
  .ceb-question-progressbar .ceb-question-status {
    color: #00adee;
    margin: -5px auto;
    margin-left: 10px;
    font-family: 'proxima_semibold'; }
  .ceb-question-progressbar .ceb-progress-dot {
    width: 10px;
    height: 10px;
    /* display: table-row; */
    float: right;
    margin-right: 10px;
    border-radius: 30px;
    background-image: linear-gradient(to bottom, #dcdcdc, #e5e5e5);
    box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.75), inset 0 1px 2px 0 rgba(0, 0, 0, 0.2); }
  .ceb-question-progressbar .ceb-progress-dot.completed {
    background: linear-gradient(#00c8f3, #0097f3);
    float: left; }
  .ceb-question-progressbar .margin-left-10 {
    margin-right: 0px;
    margin-left: 10px; }
  .ceb-question-progressbar .row > div {
    padding: 0px; }

.col-xs-2 {
  margin-top: 40px;
  background: green; }

.col-xs-3 {
  background: red; }

.col-xs-4 {
  background: green; }

.questions .ng-enter,
.instructions .ng-enter {
  transition: .5s;
  margin-right: 80%; }

.questions .ng-enter-active,
.instructions .ng-enter-active {
  margin-right: 0px; }

.questions .ng-move,
.instructions .ng-move {
  transition: .5s; }

/*-------------------------------------------------
SMACSS: LAYOUT - HEADER
-------------------------------------------------*/
header {
  border-top: 2px solid #e85151;
  padding: 10px;
  color: #e85151; }
  header .title {
    font-size: 1.875em; }
  header .caption {
    padding-top: 10px;
    font-size: 14px; }

.navbar {
  border-radius: 0px; }

/* Instruction & Exit Page */
.ceb-background {
  /* background:url('../images/ceb-background.jpg') no-repeat center center fixed;
    background-size: cover;*/ }

.info-box {
  margin: 10px auto;
  font-size: 16px; }

.padding-bottom-40 {
  padding-bottom: 40px; }

.info-box h4 {
  color: #0e406a;
  font-size: 18px; }
/* ... */

